static_in_env/css/global.css
/*XS Button */

.btn-group-xs>.btn,
.btn-xs {
    padding: .2rem;
    border-radius: .2rem;
    width: 100%;
}


/*Colors*/

.green {
    color: #19A404;
}

.gray {
    color: #292727;
}


/*Button colors*/

.btn-main {
    border-color: white;
    background-color: transparent;
    border-width: 2;
    color: white;
}

.btn-grey {
    background-color: #4d4b4b;
    color: white;
}

.btn-blue {
    background-color: #33A1FD;
    color: white;
}

.btn-blue-outline {
    background-color: #33A1FD;
    color: white;
}

.btn-blue:hover {
    background-color: white;
    color: #1A1B41;
    border-style: solid;
    border-color: #1A1B41;
}

.btn-green {
    background-color: #19A404;
    color: white;
}

.btn-green:hover {
    border-style: solid;
    border-color: #19A404;
    background-color: white;
    color: #19A404;
}

.btn-green-outline {
    border-style: solid;
    border-color: #19A404;
    color: #19A404
}

.btn-green-outline:hover {
    background-color: #19A404;
    color: white;
}


/*Font*/

html {
    overflow-x: hidden;
}

body {
    font-family: 'Lato', sans-serif;
    background-color: white;
    overflow-x: hidden;
}


/* Table header style */

.gray-table {
    background-color: #292727;
    color: white;
}


/* Nav bar custom changes */

.dropdown-menu {
    background-color: #292727;
    border: none;
}

.dropdown-item {
    color: white;
}

.dropdown-item:hover {
    color: #292727;
}

a.nav-link {
    color: white !important;
    font-weight: bold;
}

.nav-item {
    border-radius: 5px;
}

.active-menu-item {
    border-bottom: 2px solid #19A404;
}

.nav-league {
    background-color: #33A1FD;
    border-radius: 5px;
    border-style: solid;
    border-width: 1px;
    border-color: #33A1FD;
    z-index: 1;
}

.nav-account {
    border-style: solid;
    border-width: 1px;
    border-color: white;
    border-radius: 5px;
    z-index: 1;
}

.dropdown-league {
    z-index: 999;
}

.dropdown-league:hover {
    background-color: #33A1FD;
    color: white;
    transition: .3s;
}

.nav-account {
    background-color: #292727;
    border-radius: 5px;
}

.dropdown-account:hover {
    background-color: white;
    color: black;
    transition: .3s;
}

.navbar .navbar-collapse {
    text-align: center;
}

